--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "request": "~2.53.0",
-    "q": "~1.2.0"
+    "q": "~1.2.0",
+    "mongoose": "~3.8.25",
+    "bcrypt": "~0.8.1",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "connect-flash": "~0.1.1",
+    "express-session": "~1.10.4"
   }
 }
