--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.5.1",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "phonegap": "^4.2.0-0.24.2",
     "q": "~1.2.0",
     "request": "~2.53.0",
